--- a/BuggyTasks/Views/NewTaskPage.xaml
+++ b/BuggyTasks/Views/NewTaskPage.xaml
@@ -1,12 +1,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:BuggyTasks.ViewModels"
-             x:Class="BuggyTasks.Views.NewTaskPage">
+             x:Class="BuggyTasks.Views.NewTaskPage"
+             x:DataType="vm:NewTaskViewModel">
     <ContentPage.BindingContext>
         <vm:NewTaskViewModel />
     </ContentPage.BindingContext>
-    <VerticalStackLayout>
-        <Entry Placeholder="Enter task" Text="{Binding NewTaskTitle}" />
-        <Button Text="Add Task" Command="{Binding AddTaskCommand}" />
+    <VerticalStackLayout Padding="20" Spacing="20">
+        <Entry Placeholder="Enter task title" Text="{Binding NewTaskTitle}" />
+        <Button Text="Add Task" Command="{Binding AddNewTaskCommand}" />
     </VerticalStackLayout>
 </ContentPage>
